--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "koa-logger": "^3.2.1",
     "koa-mount": "^4.0.0",
     "koa-response-time": "^2.1.0",
-    "node-fetch": "^2.6.0"
+    "node-fetch": "^2.6.0",
+    "object-hash": "^2.0.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
