--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   },
   "scripts": {
     "start": "./bin/server",
-    "dev": "DEBUG=upward:* nodemon ./bin/server"
+    "dev": "MAGE_HOST=https://shop.salon.mygento.net DEBUG=upward:* nodemon ./bin/server",
+    "dev2": "MAGE_HOST=https://shop.salonsecret.ru/warp DEBUG=upward:* nodemon ./bin/server"
   },
   "repository": "github:mygento/upward",
   "keywords": [
@@ -40,7 +41,8 @@
     "koa-response-time": "^2.1.0",
     "lru-cache": "^5.1.1",
     "node-fetch": "^2.6.0",
-    "object-hash": "^2.0.3"
+    "object-hash": "^2.0.3",
+    "redis": "^3.0.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
