--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "@apollo/client": "^3.0.0-beta.41",
     "@koa/router": "^8.0.8",
+    "amqplib": "^0.5.6",
     "apollo-link-persisted-queries": "^0.2.2",
     "debug": "~4.1.1",
     "dotenv": "^8.2.0",
