--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "object-hash": "^2.0.3"
   },
   "devDependencies": {
-    "nodemon": "^2.0.4"
+    "nodemon": "^2.0.4",
+    "prettier": "^2.0.5"
   },
   "peerDependencies": {},
   "engines": {
